<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/SignUpbutton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:onClick="SignUpMove"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:text="Login Here!"
        android:autoSizeTextType="uniform"
        android:textAlignment="center" />


    <EditText
        android:id="@+id/email"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="70dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="#0011FF"
        android:onClick="checkLogin"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
 />


</LinearLayout>