<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

<!--Below Linear Layout is an example of framing
areas in app for images, text, etc. -->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/LoginSwitch"
                android:layout_width="match_parent"
                android:background="#333333"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:autoSizeTextType="uniform"
                android:text="@string/login_instead"
                android:textSize="18dp"
                android:textColor="#00e5ff"
                android:textStyle="bold"
                />
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="picture"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/guessilldie"
                android:layout_alignTop="@+id/LoginSwitch"/>

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:padding="16dp">


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="email"
                android:inputType="textEmailAddress"

                />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                 />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                 />

            <Button
                android:id="@+id/addmember"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:background="#0011FF"
                android:onClick="checkSignUpDetail"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>
    <!--attempt at scrolling views-->


</LinearLayout>